--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -160,18 +160,32 @@ select:-webkit-autofill:focus {
 }
 .title-25{
   font-size: 25px;
-  line-height: 1.3;
+  line-height: 1.2;
   font-family: var(--fontSemi);
   font-weight: 600;
+  @media (max-width: 1023px) {
+    font-size: 20px;
+  }
+  @media (max-width: 767px) {
+  font-size: 25px;
+  }
 }
-.title-20,.title-15{
+.title-20{
   font-size: 20px;
-  line-height: 1.3;
   font-family: var(--fontMedium);
   font-weight: 500;
+  @media (max-width: 1023px) {
+      font-size: 18px;
+    }
+  
+    @media (max-width: 767px) {
+      font-size: 20px;
+    }
 }
 .title-15{
   font-size: 15px;
+  font-family: var(--fontMedium);
+    font-weight: 500;
 }
 .txt-bold{
   font-family: var(--fontBold);
