--- a/src/scss/sections/_consructor-inner.scss
+++ b/src/scss/sections/_consructor-inner.scss
@@ -1,4 +1,5 @@
 .constructor{
+	height: 500px;
 	&-column{
 		width: 340px;
 		flex-shrink: 0;
@@ -9,5 +10,42 @@
 		display: flex;
 		flex-direction:column ;
 		&>*{width: 100%;}
+	}
+}
+/*******************************/
+ .constructor-display.active{
+	position: relative;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+}
+.constructor-buttons {
+	justify-content: space-between;
+	// margin-top: -50px;
+	position: absolute;
+	left: 0;
+	right: 0;
+	bottom: 0;
+
+	@media (max-width: 1023px) {
+		margin-top: 30px;
+	}
+
+	@media (max-width: 767px) {
+		margin-top: 20px;
+		justify-content: center;
+		column-gap: 30px;
+
+		.btn {
+			padding-inline: 10px;
+		}
+	}
+}
+.constructor-column-center,.constructor-column-right{
+	margin-top: -30px;
+}
+@media (max-width: 1023px) {
+	
+	#output-color {
+		display: none;
 	}
 }
