--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,14 +1,14 @@
 extends ../layouts/layout.pug
 
 block content
-	include ../sections/_header.pug
+	//- include ../sections/_header.pug
 	main.page-main
-		include ../sections/_header-banner.pug
+		//- include ../sections/_header-banner.pug
 		//- include ../sections/_steps.pug
-		include ../sections/_constructor.pug
+		//- include ../sections/_constructor.pug
 		include ../sections/_constructor-new.pug
-		include ../sections/_video-preview.pug
-		include ../sections/_review.pug
+		//- include ../sections/_video-preview.pug
+		//- include ../sections/_review.pug
 	
 block variables
 	-var title = "Shaker";
