--- a/src/pug/sections/_constructor.pug
+++ b/src/pug/sections/_constructor.pug
@@ -51,7 +51,7 @@ section.constructor.constructor-minimize.white-bg.mt-30
 					
 			//========= Images Block ========
 			.constructor-form__display.d-flex-x
-				.constructor-form__images
+				.constructor-images
 					img.model-base(src="./img/c01/c01_base.webp", width="270" alt="c01")
 					img.model-body(src="./img/c01/c01_body.webp", width="270" alt="c01")
 					img.model-cap(src="./img/c01/c01_cap_yellow.webp", width="270" alt="c01")
