--- a/src/pug/sections/_steps.pug
+++ b/src/pug/sections/_steps.pug
@@ -54,7 +54,7 @@ section.constructor.white-bg.mt-30
 							//========= Images Block ========
 							.constructor-form__display.d-flex-x
 								p.current-model-name С01 <br>600 мл
-								.constructor-form__images
+								.constructor-images
 									img.model-base(src="./img/c01/c01_base.webp", width="270" alt="c01")
 									img.model-body(src="./img/c01/c01_body.webp", width="270" alt="c01")
 									img.model-cap(src="./img/c01/c01_cap_yellow.webp", width="270" alt="c01")
