--- a/src/pug/sections/_constructor-new.pug
+++ b/src/pug/sections/_constructor-new.pug
@@ -49,7 +49,7 @@ section.constructor.white-bg.mt-30
 		.constructor-display.active(js-step-content)
 			//=======LEFT COLUMN ======
 			.constructor-column-left
-				p.title-20 Выберите цвета деталей<br> и сделайте заказ
+				h3.title-20.mb-20 Выберите цвета деталей<br> и сделайте заказ
 			
 			
 			//======= CENTER COLUMN ======
