--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,7 +12,7 @@
 
  @import "sections/header";
  @import "sections/header-banner";
- @import "sections/steps";
+//  @import "sections/steps";
 @import "sections/consructor-inner";
  @import "sections/video-preview";
  @import "sections/review";
