--- a/src/scss/sections/_consructor-inner.scss
+++ b/src/scss/sections/_consructor-inner.scss
@@ -1,3 +1,17 @@
+*[js-step-content] {
+	display: none;
+	opacity: 0;
+
+	&.active {
+		display: block;
+		animation-name: slowOpacity;
+		animation-duration: .3s;
+		animation-timing-function: linear;
+		animation-fill-mode: forwards;
+		animation-delay: .2s;
+	}
+}
+
 .constructor{
 	height: 500px;
 	padding-block: 29px;
@@ -17,14 +31,235 @@
 		padding-inline: 10px;
 	}
 }
+.constructor-header {
+	column-gap: 25px;
+	margin-bottom: 6px;
+
+	.title-25 {
+		opacity: 0.3;
+		transition: .3s;
+	}
+
+	.title-25.active {
+		opacity: 1;
+	}
+
+}
+.current-model-name {
+	display: none;
+	font-family: var(--fontMedium);
+	font-weight: 500;
+
+	@media (max-width: 767px) {
+		display: block;
+		position: absolute;
+		bottom: 14px;
+		left: 0;
+	}
+}
+
+.constructor-images {
+	position: relative;
+	flex-shrink: 0;
+	width: 270px;
+	aspect-ratio: 45 / 73;
+	margin: 0 auto;
+	img {
+		position: absolute;
+		inset: 0;
+		width: 100%;
+		height: 100%;
+		object-fit: contain;
+	}
+
+	.model-body,
+	.model-cap,
+	.model-snap {
+		z-index: 0;
+	}
+
+	@media (max-width: 1023px) {
+		width: 210px;
+
+	}
+
+	@media (max-width: 767px) {
+		width: 141px;
+		
+	}
+}
+
+.model-parts {
+	margin-bottom: 30px;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: repeat(2, 1fr);
+	grid-column-gap: 10px;
+	grid-row-gap: 10px;
+
+	.model-part:first-child {
+		grid-area: 1 / 1 / 2 / 2;
+	}
+
+	.model-part:nth-child(2) {
+		grid-area: 1 / 2 / 2 / 3;
+	}
+
+	.model-part:nth-child(3) {
+		grid-area: 1 / 3 / 2 / 4;
+	}
+
+	.model-part:nth-child(4) {
+		grid-area: 2 / 1 / 3 / 2;
+	}
+
+	.model-part:nth-child(5) {
+		grid-area: 2 / 2 / 3 / 4;
+	}
+
+	.model-part {
+		width: 100%;
+
+		.btn-slim {
+			width: 100%;
+
+			pointer-events: none;
+		}
+
+		input:checked+.btn-slim {
+			background-color: var(--darkBg);
+			color: white;
+		}
+	}
+
+	@media (max-width: 767px) {
+		margin-bottom: 0;
+	}
+}
+
+.scroll-horizontal {
+
+	@media (max-width: 767px) {
+		overflow: hidden;
+		width: calc(50% + 50vw) !important;
+		overflow-x: auto;
+		scrollbar-width: none;
+
+		&::-webkit-scrollbar {
+			display: none;
+		}
+
+	}
+}
+
+.colors-palette-block {
+	.txt-bold {
+		margin-bottom: 16px;
+	}
+
+}
+
+.colors-palette {
+	display: flex;
+	gap: 20px;
+	flex-wrap: wrap;
+	padding-left: 5px;
+	padding-top: 10px;
+
+	@media (max-width: 767px) {
+		flex-wrap: nowrap;
+		width: 100%;
+		margin-bottom: 25px;
+
+		.model-color {
+			flex-shrink: 0;
+		}
+	}
+}
+
+.model-color {
+	width: 20px;
+	height: 20px;
+	transform: rotate(45deg);
+	transition: .3s;
+
+	&__item {
+		width: 100%;
+		height: 100%;
+		border-radius: 50%;
+
+		position: relative;
+
+		&:after {
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			width: 20px;
+			height: 20px;
+			border: 1px solid #999;
+			z-index: 3;
+			border-radius: inherit;
+		}
+
+		svg {
+			position: absolute;
+			width: 18px;
+			height: 19px;
+			top: -4px;
+			right: 1.5px;
+			bottom: 0;
+			z-index: 2;
+		}
+	}
+}
+
+.model-color.model-color--current {
+	transform: rotate(45deg) scale(1.5);
+}
+.constructor-frame__button {
+	display: flex;
+	justify-content: flex-end;
+
+	@media (max-width: 767px) {
+		justify-content: center;
+	}
+}
+.constructor-frame__footer {
+	justify-content: space-between;
+	margin-top: -50px;
+
+	@media (max-width: 1023px) {
+		margin-top: 30px;
+	}
+
+	@media (max-width: 767px) {
+		margin-top: 20px;
+		justify-content: center;
+		column-gap: 30px;
+
+		.btn {
+			padding-inline: 10px;
+		}
+	}
+}
+
+
 .constructor.constructor-minimize{
+	.constructor-column-center,
+	.constructor-column-right{margin-top: 0;}
 	.constructor-form__options{
 		display: flex;
 		flex-direction:column ;
 		&>*{width: 100%;}
 	}
+	@media (max-width: 1023px) {
+		display: none;
+	}
 }
-/*******************************/
+
  .constructor-display.active{
 	position: relative;
 	display: grid;
@@ -35,7 +270,7 @@
 }
 .constructor-buttons {
 	justify-content: space-between;
-	// margin-top: -50px;
+	
 	position: absolute;
 	left: 0;
 	right: 0;
@@ -57,25 +292,27 @@
 		}
 	}
 }
+
 .constructor-column-center,.constructor-column-right{
 	margin-top: -30px;
 	position: relative;
-	padding-block: 20px;
+	
 	@media (max-width: 767px) {
-	margin-top: 0;
+	margin-top: 0;padding-block: 20px;
 	}
 }
 .constructor-column-center{
 	@media (max-width: 767px) {
-		    
+		    padding-top: 0;	
 			padding-bottom: 30px;
 		}
 }
 .constructor-column-right{
+	display: flex;
+	flex-direction: column;
+	&>*{width: 100%;}
 	@media (max-width: 767px) {
-		display: flex;
 		flex-direction: column-reverse;
-		&>*{width: 100%;}
 		padding-top: 5px;
 		&:after, &:before{
 			content: '';
