--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -7,6 +7,8 @@ block content
 		include ../sections/_constructor-main-page.pug
 		include ../sections/_video-preview.pug
 		include ../sections/_review.pug
+		include ../sections/_portfolio.pug
+
 	
 block variables
 	-var title = "Shaker";
