--- a/src/scss/base/_icons.scss
+++ b/src/scss/base/_icons.scss
@@ -53,3 +53,16 @@
 		color: var(--lightText);
 	}
 }
+.icon-table{
+	width: 30px;
+	height: 30px;
+	opacity: .5;
+	transition: .3s; 
+	&:hover{
+		opacity: .3;
+	}
+	svg{
+		width: 30px;
+		height: 30px;
+	}
+}
