--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,7 @@
  @import "sections/header-banner";
 //  @import "sections/steps";
 @import "sections/consructor-inner";
- @import "sections/video-preview";
- @import "sections/review";
+@import "sections/video-preview";
+@import "sections/review";
+@import "sections/portfolio";
 
