--- a/src/scss/sections/_consructor-inner.scss
+++ b/src/scss/sections/_consructor-inner.scss
@@ -46,13 +46,13 @@
 
 }
 .current-model-name {
-	display: none;
+	position: absolute;
 	font-family: var(--fontMedium);
 	font-weight: 500;
-
+	top: 50%;
+	left: -30px;
 	@media (max-width: 767px) {
-		display: block;
-		position: absolute;
+		top: auto;
 		bottom: 14px;
 		left: 0;
 	}
@@ -156,6 +156,10 @@
 	.txt-bold {
 		margin-bottom: 16px;
 	}
+	@media (max-width: 767px) {
+		display: flex;
+		flex-direction: column-reverse;
+	}
 
 }
 
@@ -169,7 +173,7 @@
 	@media (max-width: 767px) {
 		flex-wrap: nowrap;
 		width: 100%;
-		margin-bottom: 25px;
+		margin-bottom: 14px;
 
 		.model-color {
 			flex-shrink: 0;
@@ -325,11 +329,5 @@
 		&:after{top: 0;}
 		&:before{bottom: 0;}
 		
-	}
-}
-@media (max-width: 1023px) {
-	
-	#output-color {
-		display: none;
 	}
 }
