--- a/src/scss/sections/_portfolio.scss
+++ b/src/scss/sections/_portfolio.scss
@@ -17,11 +17,15 @@
 	}
 	&-item{
 		width: min(280px, 100%);
-		
+		overflow: hidden;
 		aspect-ratio: 1;
+		&:hover{
+			img{transform: scale(1.15) rotate(3deg);}
+		}
 		img{
 			width: 100%;
 			height: 100%;
+			transition: .3s; 
 		}
 	}
 }
