--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -8,6 +8,8 @@ block content
 		include ../sections/_video-preview.pug
 		include ../sections/_review.pug
 		include ../sections/_portfolio.pug
+		include ../sections/_blog-cards.pug
+
 
 	
 block variables
