--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -9,6 +9,8 @@ block content
 		include ../sections/_review.pug
 		include ../sections/_portfolio.pug
 		include ../sections/_blog-cards.pug
+	include ../sections/_contacts.pug
+
 
 
 	
