--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -196,8 +196,17 @@ select:-webkit-autofill:focus {
 .online-state{
    display: flex;
 }
+.mb-40 {
+  margin-bottom: 40px;
+}
 .mb-20{
   margin-bottom: 20px;
+}
+.mb-15 {
+  margin-bottom: 20px;
+}
+.mt-15 {
+  margin-top: 20px;
 }
 .mt-20 {
   margin-top: 20px;
