--- a/src/pug/sections/_constructor-inner-page.pug
+++ b/src/pug/sections/_constructor-inner-page.pug
@@ -127,7 +127,7 @@ section.constructor.constructor-minimize.white-bg.mt-30
 				
 				//=========BUTTON ===========
 				.constructor-frame__button.mt-auto
-					a(href="#order-form").btn
+					a(href="#contacts").btn
 						span Заказать
 						svg.angle-right
 							use(href="./img/spriteSvg.svg#angle-right")
