--- a/src/pug/sections/_steps.pug
+++ b/src/pug/sections/_steps.pug
@@ -132,7 +132,7 @@ section.constructor.white-bg.mt-30
 							span Выбрать модель
 							
 
-						a(href="#order-form").btn
+						a(href="#contacts").btn
 							span Заказать
 							svg.angle-right
 								use(href="./img/spriteSvg.svg#angle-right")
