--- a/src/scss/base/_forms.scss
+++ b/src/scss/base/_forms.scss
@@ -10,3 +10,76 @@
 		opacity: 0;
 	}
 }
+.form-item{
+	position: relative;
+	display: block;
+	margin-bottom: 20px;
+	input, textarea{
+		display: block;
+		padding-left: 14px;
+		width: 100%;
+		border-bottom: 1px solid black;
+		height: 32px;
+		font-size: 15px;
+		color: #000000;
+		font-family: var(--fontMedium);
+		font-weight: 500;
+		&.error{
+			border-bottom: 1px solid red;
+		}
+		&::placeholder{
+			font-family: inherit;
+			color: inherit;
+			font-size: inherit;
+		}
+		
+	}
+	textarea {
+		border-radius: 20px;
+		border: 1px solid #000;
+		resize: none;
+		padding: 18px;
+		height: 200px;
+
+		&::placeholder {
+			color: #b1b1b1;
+		}
+	}
+}
+ .inputfile {
+ 	width: 0.1px;
+ 	height: 0.1px;
+ 	overflow: hidden;
+ 	position: absolute;
+ 	z-index: -1;
+ 	opacity: 0;
+
+ }
+ .inputfile+label {
+ 	font-size: 15px;
+	font-family: var(--fontMedium);
+	font-weight: 500;
+ }
+.form-item.form-item--custom{
+	padding-left: 15px;
+	border-bottom: 1px solid black;
+	height: 32px;
+	padding-bottom: 8px;
+	display: flex;
+	align-items: center;
+	overflow: hidden;
+	.form-label{
+		display: flex;
+		gap: 20px;
+		align-items: flex-end;
+		cursor: pointer;
+	}
+}
+ 
+ .inputfile+label+span {
+ 	color: #1e6791;
+ 	vertical-align: top;
+ 	padding: 10px 0 0 15px;
+ 	display: inline-block;
+ 	font-weight: 600;
+ }
