--- a/src/scss/sections/_blog-cards.scss
+++ b/src/scss/sections/_blog-cards.scss
@@ -15,6 +15,7 @@
 }
 .blog-card{
 	font-family: var(--fontMedium);
+	font-weight: 500;
 	overflow: hidden;
 	border-radius: 10px;
 	width: min(586px, 100%);
