--- a/src/scss/sections/_review.scss
+++ b/src/scss/sections/_review.scss
@@ -46,6 +46,7 @@
 	column-gap:45px;
 	font-family: var(--fontMedium);
 	font-weight: 500;
+	font-weight: 500;
 	@media (max-width: 1364px) {
 		padding: 30px;
 		column-gap: 20px;
