--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -103,7 +103,7 @@ select:-webkit-autofill,
 select:-webkit-autofill:hover,
 select:-webkit-autofill:focus {
 
-  -webkit-box-shadow: 0 0 0px 1000px #01203c inset;
+  -webkit-box-shadow: 0 0 0px 1000px #ffffff inset;
   transition: background-color 5000s ease-in-out 0s;
 }
 .page-main {
