--- a/src/scss/base/_forms.scss
+++ b/src/scss/base/_forms.scss
@@ -16,7 +16,7 @@
 	margin-bottom: 20px;
 	input, textarea{
 		display: block;
-		padding-left: 14px;
+		padding-left: 12px;
 		width: 100%;
 		border-bottom: 1px solid black;
 		height: 32px;
@@ -63,7 +63,7 @@
 .form-item.form-item--custom{
 	padding-left: 15px;
 	border-bottom: 1px solid black;
-	height: 32px;
+	min-height: 32px;
 	padding-bottom: 8px;
 	display: flex;
 	align-items: center;
@@ -84,20 +84,30 @@
  	font-weight: 600;
  }
  .form-notice{
-	column-gap: 10px;
+	gap: 10px;
 	font-family: var(--fontMedium);
 	align-items: center;
 	font-weight: 500;
-	margin-bottom: 30px;
+	margin-bottom: 24px;
+	@media (max-width: 576px) {
+		flex-direction: column;
+		justify-content: center;
+		text-align: center;
+	}
  }
  .form-confirm{
 	display: flex;
 	align-items: flex-start;
 	column-gap: 16px;
-	margin-bottom: 30px;
+	margin-bottom: 25px;
 	a{
 		color: #2899f8;
 		border-bottom: 1px solid #2899f8;
 		display: inline;
+	}
+ }
+ .form-submit {
+	@media (max-width: 576px) {
+		.btn{width: 100%;}
 	}
  }
