--- a/src/scss/sections/_contacts.scss
+++ b/src/scss/sections/_contacts.scss
@@ -1,13 +1,25 @@
 .contacts{
 	background-color: #fff;
 	padding: 30px 50px;
+	@media (max-width: 1023px) {
+		padding: 30px 20px;
+	}
 	&-content{
 		display: flex;
 		column-gap: 55px;
+		@media (max-width: 1199px) {gap: 30px;}
+		@media (max-width: 767px) {
+		flex-direction: column;
+		&>*{width: 100%;}
+		};
 	}
 	&-column{
 		width: 430px;
 		flex-shrink: 0;
+		@media (max-width: 1023px) {
+			width: 100%;
+			max-width: 280px;
+		}
 	}
 	&-form-wrapper{
 		flex-grow: 1;
@@ -23,6 +35,18 @@
 		border-radius: 50%;
 		overflow: hidden;
 		flex-shrink: 0;
+		img{
+			width: 100%;
+			height: 100%;
+		}
+		@media (max-width: 1199px) {
+			width: 100px;
+			height: 100px;
+		}
+		@media (max-width: 767px) {
+			width: 150px;
+			height: 150px;
+		}
 	}
 	&__info{
 		padding-top: 15px;
@@ -37,5 +61,10 @@
 	.social-block{
 		gap:11px;
 		margin-bottom: 45px;
+	}
+	@media (max-width: 1023px) {
+		flex-direction: column;
+		&__info{width: 100%;}
+		gap:30px;
 	}
 }
