--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -1,4 +1,21 @@
-.mouse-parallax
-	.mouse-parallax-bg
-	.mouse-parallax-fog-1
-	.mouse-parallax-fog-2
+footer.footer
+	.container
+		.footer-content
+			.footer-logo
+				a(href="#!").logo
+					span Shaker Bottle #[sup TM]
+					span Производитель шейкеров в России.  2014 — 2023
+
+			.footer-menu
+				nav
+					a(href="#!") Text
+					a(href="#!") Text
+					a(href="#!") Text
+					a(href="#!") Text
+					a(href="#!") Text
+				nav
+					a(href="#!") Text
+					a(href="#!") Text
+					a(href="#!") Text
+					a(href="#!") Text
+					a(href="#!") Text
