--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -4,8 +4,9 @@ header.header
 		.header-content.d-flex
 			
 			//====== logo =========
-			a(href="index.html").logo
-				img(src="./img/logo.svg", width="205" height="22" alt="logo")
+			a(href="index.html").logo.logo
+				span Shaker Bottle #[sup TM]
+				//- img(src="./img/logo.svg", width="205" height="22" alt="logo")
 				span Производитель  шейкеров
 			
 			//====== header-models =========
