--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -10,6 +10,8 @@ block content
 		include ../sections/_portfolio.pug
 		include ../sections/_blog-cards.pug
 	include ../sections/_contacts.pug
+	include ../sections/_footer.pug
+
 
 
 
