--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -4,18 +4,21 @@ footer.footer
 			.footer-logo
 				a(href="#!").logo
 					span Shaker Bottle #[sup TM]
-					span Производитель шейкеров в России.  2014 — 2023
+					span Производитель шейкеров в России.  2014&nbsp;—&nbsp;2023
 
-			.footer-menu
-				nav
-					a(href="#!") Text
-					a(href="#!") Text
-					a(href="#!") Text
-					a(href="#!") Text
-					a(href="#!") Text
-				nav
-					a(href="#!") Text
-					a(href="#!") Text
-					a(href="#!") Text
-					a(href="#!") Text
-					a(href="#!") Text
+			
+			//====footer menu wrapper =======
+			.footer-menu-wrapper
+				h3.title-15.mb-40 Прдукция:
+				//======= nav columns ======
+				.footer-menu
+					
+					nav
+						a(href="#!") Шейкеры
+						a(href="#!") Бутылки с логотипом
+						a(href="#!") Спортивные бутылки
+					
+					nav
+						a(href="#!") Подарки с логотипом
+						a(href="#!") Продукция с логотипом
+						a(href="#!") Брендированные сувениры
