--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -26,7 +26,7 @@ header.header
 					li
 						a(href="#!")  Как заказать
 					li
-						a(href="#!")  Статьи
+						a(href="blog.html")  Статьи
 					li
 						a(href="#!")  Контакты
 			.header-contacts.d-flex
