--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -106,12 +106,18 @@ select:-webkit-autofill:focus {
   -webkit-box-shadow: 0 0 0px 1000px #ffffff inset;
   transition: background-color 5000s ease-in-out 0s;
 }
-.page-main {
+.page-main,.inner-page {
   width: min(1260px, 100%);
   margin-inline: auto;
   padding-inline: 30px;
   @media (max-width: 767px) {
       padding-inline: 10px;
+  }
+}
+.inner-page{
+  padding-top: 25px;
+  .h1{
+    margin-bottom: 45px;
   }
 }
 .container{
