--- a/src/pug/pages/blog.pug
+++ b/src/pug/pages/blog.pug
@@ -44,7 +44,8 @@ block content
 				
 				+blog-card(9, 'Ее точно хватит надолго!','Заказывайте шейкеры #[br]по честной цене!')
 		
-		include ../sections/_review.pug
+	include ../sections/_contacts.pug
+	include ../sections/_footer.pug
 	
 block variables
 	-var title = "Shaker";
