--- a/src/pug/sections/_contacts.pug
+++ b/src/pug/sections/_contacts.pug
@@ -10,7 +10,7 @@ section.contacts#contacts
 					.manager-card__info
 						p.title-25.mb-15 Анастасия
 						
-						.manager-card__links.mb-15
+						.contacts-links.mb-15
 							a(href="tel:+79068660922") +7 906 866 09 22
 							a(href="mailto:3@sbottle.ru") 3@sbottle.ru
 
