--- a/src/pug/sections/_review.pug
+++ b/src/pug/sections/_review.pug
@@ -52,11 +52,12 @@ section.review
 						p X-fitness г. Стерлитамак
 						.review-card__desk
 							p Уже несколько лет сотрудничаем с Shaker Bottle, крутые шейкеры, отличного качества, можно подобрать любые вариации цвета. Клиенты оценили. Отлично продаются. Будем заказывать и дальше.
-
-		.swiper-button-next
-			svg
-				use(href="./img/spriteSvg.svg#caret-right")
-		.swiper-button-prev
-			svg
-				use(href="./img/spriteSvg.svg#caret-left")
-		.swiper-pagination
+		//====== bottom navigation =======
+		.bottom-navigation
+			.swiper-button-next
+				svg
+					use(href="./img/spriteSvg.svg#caret-right")
+			.swiper-button-prev
+				svg
+					use(href="./img/spriteSvg.svg#caret-left")
+			.swiper-pagination
