--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,4 +22,7 @@
 @import "sections/contacts";
 @import "sections/footer";
 
+
 @import "pages/blog-page";
+@import "sections/acordion";
+@import "pages/contacts";
