--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -31,7 +31,8 @@
 	padding: 0;
 	width: 100%;
   background-color: #e2e2e2;
-  font-family: var(--font);
+  font-family: var(--fontMedium);
+  font-weight: 500;
   color: var(--text);
   font-size: 15px;
   line-height: 1.2;
@@ -79,7 +80,7 @@
   button, button:focus, input:focus {
 	outline: none;
   border: none;
-  background-color: none;
+  background: none;
   }
   
   button {
@@ -198,8 +199,15 @@ select:-webkit-autofill:focus {
 .txt-bold{
   font-family: var(--fontBold);
 }
+.txt-center{text-align: center;}
 .contact-link {
   font-size: 20px;
+}
+.contacts-links a {
+  display: block;
+  width: fit-content;
+  padding-block: 2px;
+  white-space: nowrap;
 }
 .online-state{
    display: flex;
@@ -228,6 +236,9 @@ select:-webkit-autofill:focus {
   margin-top: 30px;
   }
 }
+.p-0{
+  padding: 0!important;
+}
 .mt-auto{margin-top: auto;}
 .white-bg{
   background-color: white;
@@ -235,6 +246,9 @@ select:-webkit-autofill:focus {
   @media (max-width: 767px) {
     border-radius: 10px;
   }
+}
+.accent-bg{
+  background-color: #fdebc5!important;
 }
 .section-title{
   padding-top: 90px;
@@ -270,5 +284,51 @@ select:-webkit-autofill:focus {
 @keyframes slowOpacity{
   to{
     opacity: 1;
+  }
+}
+.bottom-navigation .swiper-pagination {
+  bottom: 12px;
+  width: fit-content;
+  position: absolute;
+
+  left: 50%;
+  transform: translate(-50%);
+  font-weight: 700;
+  font-variant-numeric: tabular-nums;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  top: calc(100% - 20px);
+
+}
+
+.swiper-button-prev {
+  left: 43%
+}
+
+.swiper-button-next {
+  right: 43%
+}
+
+@media (max-width: 1199px) {
+  .swiper-button-prev {
+    left: 38%;
+  }
+
+  .swiper-button-next {
+    right: 38%;
+  }
+}
+
+@media (max-width: 767px) {
+ 
+
+  .swiper-button-prev {
+    left: 20%;
+  }
+
+  .swiper-button-next {
+    right: 20%;
   }
 }
