--- a/src/pug/pages/contacts.pug
+++ b/src/pug/pages/contacts.pug
@@ -22,7 +22,7 @@ block content
 							h2.h2.txt-center Остались<br>вопросы?
 						
 						//====== opening hours + contacts =====
-						.contacts-block.d-flex
+						.contacts-block.contacts-block--connect
 							//====== opening hours =============
 							.contacts-opening.accent-bg
 								p 10:00 — 18:00
@@ -79,7 +79,7 @@ block content
 									.acor-body
 										p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 									
-						.contacts-block.p-0
+						.contacts-block.contacts-block--map
 							map.map
 								script(type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A63eb4a2915622d91de2ad7a02d86ccac3775bafed3de9bcb5f148c003b77dca4&amp;width=600&amp;height=600&amp;lang=ru_RU&amp;scroll=true")
 		
