--- a/src/scss/pages/_contacts.scss
+++ b/src/scss/pages/_contacts.scss
@@ -2,6 +2,9 @@
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	gap: 15px;
+	@media (max-width: 767px) {
+	gap: 10px;
+	}
 	.contacts-block{
 		flex-shrink: 0;
 		flex-grow: 1;
@@ -9,12 +12,23 @@
 		padding: 30px;
 		border-radius: 10px;
 		overflow:hidden;
-		&.d-flex{
+		@media (max-width: 767px) {
+		padding: 20px;
+		}
+		&.contacts-block--connect{
 			gap:30px;
 			align-items: flex-start;
+			display: flex;
+			padding-bottom: 20px;
 			&>*{
 				border-radius: 10px;
 				padding: 10px 20px;
+			}
+			@media (max-width: 767px) {
+			flex-direction: column;
+			gap:20px;
+			padding-bottom: 10px;
+			&>*{width: 100%;}
 			}
 		}
 		.contacts-opening{
@@ -41,10 +55,25 @@
 .contacts-row.contacts-row--info{
 	align-items: start;
 	min-height: 470px;
+	@media (max-width: 767px) {
+		min-height: unset;
+	}
+}
+.contacts-block.contacts-block--map{
+	padding: 0!important;
+	@media (max-width: 767px) {
+	border-radius: 0;
+	margin-left: -20px;
+	margin-right: -20px;
+	margin-top: 15px;
+	}
 }
 .map{
 	width: 100%;
 	display: block;
 	height: 470px;
+	@media (max-width: 767px) {
+		height: 300px;
+	}
 	
 }
