--- a/src/pug/pages/contacts.pug
+++ b/src/pug/pages/contacts.pug
@@ -7,7 +7,7 @@ block content
 		.breadcrumbs
 			ul
 				li
-					a(href="#!") Главная
+					a(href="index.html") Главная
 				li
 					a(href="#!") Контакты
 		
