--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -117,6 +117,7 @@ select:-webkit-autofill:focus {
 }
 .inner-page{
   padding-top: 25px;
+  padding-bottom: 25px;
   .h1{
     margin-bottom: 45px;
   }
@@ -286,49 +287,52 @@ select:-webkit-autofill:focus {
     opacity: 1;
   }
 }
-.bottom-navigation .swiper-pagination {
-  bottom: 12px;
-  width: fit-content;
-  position: absolute;
+.bottom-navigation{
+  .swiper-pagination {
+    bottom: 12px;
+    width: fit-content;
+    position: absolute;
 
-  left: 50%;
-  transform: translate(-50%);
-  font-weight: 700;
-  font-variant-numeric: tabular-nums;
-}
+    left: 50%;
+    transform: translate(-50%);
+    font-weight: 700;
+    font-variant-numeric: tabular-nums;
+  }
 
-.swiper-button-prev,
-.swiper-button-next {
-  top: calc(100% - 20px);
+  .swiper-button-prev,
+  .swiper-button-next {
+    top: calc(100% - 20px);
+    flex-shrink: 0;
 
-}
+  }
 
-.swiper-button-prev {
-  left: 43%
-}
-
-.swiper-button-next {
-  right: 43%
-}
-
-@media (max-width: 1199px) {
   .swiper-button-prev {
-    left: 38%;
+    left: 43%
   }
 
   .swiper-button-next {
-    right: 38%;
-  }
-}
-
-@media (max-width: 767px) {
- 
-
-  .swiper-button-prev {
-    left: 20%;
+    right: 43%
   }
 
-  .swiper-button-next {
-    right: 20%;
+  @media (max-width: 1199px) {
+    .swiper-button-prev {
+      left: 38%;
+    }
+
+    .swiper-button-next {
+      right: 38%;
+    }
+  }
+
+  @media (max-width: 767px) {
+  
+
+    .swiper-button-prev {
+      left: 20%;
+    }
+
+    .swiper-button-next {
+      right: 20%;
+    }
   }
 }
