--- a/src/scss/blocks/_pagination.scss
+++ b/src/scss/blocks/_pagination.scss
@@ -1,7 +1,21 @@
 .pagination{
    display: flex;
    align-items: center;
-	ul{
+   justify-content: center;
+   width: fit-content;
+   margin: 0 auto;
+   column-gap: 25px;
+   font-family: var(--fontBold);
+   font-weight: 700;
+   margin-top: 44px;
+   @media (max-width: 767px) {
+		margin-top: 30px;
+   }
+	&-counter{
 		display: flex;
+		align-items: center;
+		gap:6px;
+		width: fit-content;
+		font-variant-numeric: tabular-nums;
 	}
 }
