--- a/src/scss/blocks/_swiper-slider.scss
+++ b/src/scss/blocks/_swiper-slider.scss
@@ -3,7 +3,7 @@
 	display: none;
 }
 
-.swiper-button-next,
+.btn-next, .btn-prev, .swiper-button-next,
 .swiper-button-prev {
 	width: 40px;
 	height: 40px;
@@ -30,7 +30,7 @@
 	display: flex;
 	align-items: center;
 	column-gap: 8px;
-	
+	font-variant-numeric: tabular-nums;
 	&-bullet {
 		width: 10px;
 		height: 10px;
