--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,6 +9,7 @@
 @import "blocks/_swiper-slider";
 @import "blocks/_model-cards";
 @import "blocks/_breadcrumbs";
+@import "blocks/_pagination";
 //sections
 
  @import "sections/header";
