--- a/src/pug/pages/blog.pug
+++ b/src/pug/pages/blog.pug
@@ -1,15 +1,18 @@
 extends ../layouts/layout.pug
 mixin blog-card(img, title, txt)
 	//=========== single card ============
-	a(href="single-blog.html").blog-card.img-zoom
+	.blog-card.img-zoom
 		.blog-card__img
 			img(src="./img/blog/"+ img +".webp", alt="img")
 		
 		.blog-card__body
-			h3.title-25 !{title}
+			a(href="single-blog.html").title-25 !{title}
 			p !{txt}
 			.blog-card__footer
-				span.btn Читать
+				a(href="single-blog.html").btn-arrow
+					span  Читать
+					svg.arrow-right
+						use( href='./img/spriteSvg.svg#arrow')
 				span 02 08 2022
 
 block content
