--- a/src/pug/pages/contacts.pug
+++ b/src/pug/pages/contacts.pug
@@ -83,7 +83,7 @@ block content
 							map.map
 								script(type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A63eb4a2915622d91de2ad7a02d86ccac3775bafed3de9bcb5f148c003b77dca4&amp;width=600&amp;height=600&amp;lang=ru_RU&amp;scroll=true")
 		
-	include ../sections/_contacts.pug
+	include ../sections/_contacts-inner.pug
 	include ../sections/_footer.pug
 
 
