--- a/src/scss/sections/_contacts.scss
+++ b/src/scss/sections/_contacts.scss
@@ -58,11 +58,15 @@
 
 	.social-block{
 		gap:11px;
-		margin-bottom: 45px;
+		&+*{margin-top: 40px;}
 	}
+
 	@media (max-width: 1023px) {
 		flex-direction: column;
 		&__info{width: 100%;}
 		gap:30px;
 	}
+}
+.manager-card +.manager-card{
+	margin-top: 50px;
 }
